<resources>
	<string name="app_name">ShoeStore</string>
	<string name="create_login_button">Create new login</string>
	<string name="login_button">Login with existing account</string>
	<string name="email">Email</string>
	<string name="email_text_hint">example@domain.com</string>
	<string name="password_text">Password</string>
	<string name="welcome_header">Welcome to The Best Shoe Store!</string>
	<string name="instruction">Instructions</string>
	<string name="show_instructions_button">Show instructions</string>
	<string name="shoe_list">Shoe List</string>
	<string name="show_shoe_list_button">Show shoe list</string>
	<string name="welcome_body">Here you will find the best shoes in the whole world!
	\n\nSuper excited you’re with us! Get ready for some amazing deals right here.
	\n\nExciting times ahead: exclusive offers, insider tips, and much more are all coming your way.
	\n\nWe have added you to our mailing list. You will be among the first people to get all of our special offers, newest updates, and announcements. We will do our best not to bore you with marketing emails!
	\n\nWe\'re elated to have you join our community. We will continue sending emails (unless you decide to unsubscribe!) to keep you updated on the latest and greatest news.
	\n\nYou can also join our communities on other platforms! We have plenty of social media accounts!
	\n\nRead our instructions for more information about how to buy our great shoes, reach us on social media and unsubscribe from our emails (which you won\'t need because you will love our emails)</string>
	<string name="instruction_header">The Best Shoe Store Instructions</string>
	<string name="instruction_body">How to buy our great shoes? That\'s easy! But to keep you curious, you can only do that in the next screen. So go ahead and click that big beautiful green button and see our shoe list as fast as possible!
	\n\n Or stay a bit longer here and read about how to reach us on social media. We are on Facebook, Instagram and Discord. Just look it up! ;)
	\n\n And now about unsubscribing from our emails, forget about that. You are doing great just as you are, you don\'t need to unsubscribe from anything.
	\n\nWe will listen to what you have to say, empathize with your feelings and do whatever we have to do to keep our open communication so you don\'t unsubscribe from our emails. We are still on beta and haven\'t coded that yet, maybe?
	\n\nEnough talking. Take a look at our shoes! Click that green inviting button!</string>
	<string name="add_shoe">Add a shoe to the list</string>
	<string name="save_button">Save</string>
	<string name="cancel_button">Cancel</string>
	<string name="logout">Logout</string>
	<string name="shoe_name">Shoe Name</string>
	<string name="company">Company</string>
	<string name="shoe_size">Shoe Size</string>
	<string name="shoe_description">Description</string>
	<string name="shoe_list_header">Add Shoes to The List</string>
	<string name="empty_fields_error">No fields can be empty.</string>
	<string name="shoe_item_header">Name: %s</string>
	<string name="shoe_item_subheader">Company: %s. Size:  %.2f</string>
	<string name="shoe_item_body">Description: %s</string>
</resources>
