<?xml version="1.0" encoding="utf-8"?>
<!-- ConstraintLayout to easily align the scrollview, button at the bottom, etc -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/instruction_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginHorizontal="@dimen/default_margin"
		android:layout_marginTop="?attr/actionBarSize"
		android:layout_marginBottom="@dimen/default_margin"
		android:orientation="vertical"
		tools:context=".screens.instruction.InstructionFragment">

		<TextView
			android:id="@+id/instruction_header_text"
			style="@style/HeaderTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/instruction_header"
			android:textAlignment="center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<ScrollView
			android:id="@+id/instruction_scroll"
			android:layout_width="@dimen/match_constraint"
			android:layout_height="0dp"
			android:layout_marginVertical="@dimen/default_margin"
			app:layout_constraintBottom_toTopOf="@id/show_shoe_list_button"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/instruction_header_text">

			<TextView
				android:id="@+id/instruction_body_text"
				style="@style/BodyTextStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:lineSpacingMultiplier="@dimen/line_spacing_multiplier"
				android:text="@string/instruction_body" />
		</ScrollView>

		<Button
			android:id="@+id/show_shoe_list_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/big_margin"
			android:text="@string/show_shoe_list_button"
			android:theme="@style/GreenButton"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>